# esp32-flight-software-idf

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  libraries.txt  run-tests.sh  sdkconfig.defaults
.github/workflows/: compile.yml  unit-test.yml
components/SimpleKalmanFilter/: CMakeLists.txt  SimpleKalmanFilter.cpp  SimpleKalmanFilter.h
components/groundControl/: CMakeLists.txt  ground_control.cpp  ground_control.h
components/groundControl/test/: CMakeLists.txt  integration.c
components/storage/: CMakeLists.txt  storage.cpp  storage.h
components/storage/test/: CMakeLists.txt  test.cpp
main/: CMakeLists.txt  PID.cpp  PID.h  datapoint.cpp  datapoint.h  flight_controller.cpp  flight_controller.h  idf_component.yml  kalman.cpp  kalman.h  main.cpp  pyro.cpp  pyro.h  sensors.cpp  sensors.h  servos.cpp  servos.h  tvc.cpp  tvc.h  tvc_test.cpp  tvc_test.h  wifi_helper.cpp  wifi_helper.h
tests/: CMakeLists.txt  test.py
